--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,9 @@ jobs:
 
       - run: raco pkg install --auto
 
+      - name: Build Keccak Lib
+        run: make deps
+
       - name: Create Puff Executable
         run: |
           mkdir -p $GITHUB_WORKSPACE/bin
